fixed fonts on firefox

--- a/src/components/High-Order/App/App.css
+++ b/src/components/High-Order/App/App.css
@@ -11,7 +11,7 @@
 body,
 html {
   background-color: var(--background-color);
-  font-family: -apple-system, BlinkMacSystemFont, 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Roboto', 'Arial', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
